--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,15 @@ development:
   password: <%= ENV["DB_PASSWORD"] %>
   adapter: postgresql
   database: <%= ENV["DB_NAME"] %> 
-production:
+staging:
   host: <%= ENV["DB_HOST"] %> 
   username: <%= ENV["DB_USERNAME"] %> 
   password: <%= ENV["DB_PASSWORD"] %>
   adapter: postgresql
   database: <%= ENV["DB_NAME"] %> 
-
+production:
+  host: <%= ENV["DB_HOST"] %>
+  username: <%= ENV["DB_USERNAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
+  adapter: postgresql
+  database: <%= ENV["DB_NAME"] %>
